# betenis-sys

./: Makefile.am  betenisd.rc  configure.ac
bt/: Makefile.am
bt-ls/: Makefile.am
bt-ls/src/: bt-ls.c
bt-mbet-lib/: Makefile.am
bt-mbet-lib/include/: bt-mbet-feed.h  bt-mbet-score.h  bt-mbet-xml.h
bt-mbet-lib/src/: bt-mbet-feed.c  bt-mbet-score.c  bt-mbet-xml.c
bt-util-lib/: Makefile.am
bt-util-lib/include/: bt-daemon.h  bt-database.h  bt-http-headers.h  bt-memory.h  bt-mysql-easy.h  bt-oncourt-players-map.h  bt-util.h
bt-util-lib/src/: bt-daemon.c  bt-database.c  bt-http-headers.c  bt-memory.c  bt-mysql-easy.c  bt-oncourt-players-map.c  bt-util.c
bt/include/: bt-channel-settings.h  bt-context.h  bt-debug.h  bt-drops.h  bt-mbet-fresh-odds-notifier.h  bt-mbet.h  bt-oncourt-database.h  bt-oncourt-dogs.h  bt-oncourt-retires.h  bt-pinnacle.h  bt-players.h  bt-private.h  bt-string-builder.h  bt-telegram-channel.h  bt-timer.h  bt-william-hill-events.h  bt-william-hill-main.h  bt-william-hill-topics.h  bt-william-hill.h
bt/src/: bt-channel-settings.c  bt-context.c  bt-drops.c  bt-main.c  bt-mbet-fresh-odds-notifier.c  bt-mbet.c  bt-oncourt-database.c  bt-oncourt-dogs.c  bt-oncourt-retires.c  bt-pinnacle.c  bt-string-builder.c  bt-telegram-channel.c  bt-timer.c  bt-william-hill-events.c  bt-william-hill-main.c  bt-william-hill-topics.c  bt-william-hill.c
data/: Makefile.am  bt.conf.in
doc/: Doxyfile.in
players.data/: Makefile.am  Makefile.in  atp.txt  wta.txt
quality/: alloc.cfg  http.cfg  mysql.cfg
